[gd_scene load_steps=2 format=3 uid="uid://dl8f3pk3dtap3"]

[ext_resource type="Script" uid="uid://ckydw4vy8o7a7" path="res://UI/character_info.gd" id="1_7rqwx"]

[node name="CharacterInfo" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 3
script = ExtResource("1_7rqwx")

[node name="CharacterName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -39.0
offset_right = 90.0
offset_bottom = -15.0
grow_vertical = 2
text = "BASE"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -9.5
offset_right = 467.0
offset_bottom = 17.5
grow_vertical = 2
show_percentage = false

[node name="HpLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 147.0
offset_top = -39.0
offset_right = 192.0
offset_bottom = -16.0
grow_vertical = 2

[node name="HP" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 147.0
offset_top = -62.0
offset_right = 192.0
offset_bottom = -39.0
grow_vertical = 2
text = "HP"

[node name="HpMaxLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 193.0
offset_top = -39.0
offset_right = 238.0
offset_bottom = -16.0
grow_vertical = 2

[node name="MAXHP" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 193.0
offset_top = -62.0
offset_right = 238.0
offset_bottom = -39.0
grow_vertical = 2
text = "MAX"

[node name="MpLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 287.0
offset_top = -39.0
offset_right = 332.0
offset_bottom = -16.0
grow_vertical = 2

[node name="MP" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 287.0
offset_top = -62.0
offset_right = 332.0
offset_bottom = -39.0
grow_vertical = 2
text = "MP"

[node name="MpMaxLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 333.0
offset_top = -39.0
offset_right = 378.0
offset_bottom = -16.0
grow_vertical = 2

[node name="MAXMP" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 333.0
offset_top = -62.0
offset_right = 378.0
offset_bottom = -39.0
grow_vertical = 2
text = "MAX"
